--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 atty = "0.2.14"
-backoff = { version = "0.4.0", features = ["tokio"] }
+#backoff = { version = "0.4.0", features = ["tokio"] }
 bincode = "2.0.1"
 clap = { version = "4.5.45", features = ["derive"] }
 fdlimit = "0.3.0"
@@ -16,7 +16,7 @@ rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 sha2 = "0.10.9"
-snow = "0.10.0"
+snow = { version = "0.10.0", default-features = false, features = [ "use-getrandom", "use-curve25519", "use-chacha20poly1305", "use-blake2", "std" ] }
 tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
