--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 atty = "0.2.14"
-#backoff = { version = "0.4.0", features = ["tokio"] }
+backon = "1.5.2"
 bincode = "2.0.1"
-clap = { version = "4.5.45", features = ["derive"] }
 fdlimit = "0.3.0"
 hex = "0.4.3"
 notify = "8.2.0"
