--- a/config.json
+++ b/config.json
@@ -9,12 +9,12 @@
 	},
 	"clients" : [
 		{
-			"server_address" : "127.0.0.1:37000",
+			"server_address" : "127.0.0.1:17000",
 			"psk" : "1234qwerA",
 			"service" : {
 				"service1" : {
-					"bind_address" : "127.0.0.1:12001",
-					"address" : "apicenter.com.cn:16001"
+					"bind_address" : "127.0.0.1:16080",
+					"address" : "192.168.124.1:80"
 				}
 			}
 		}
