--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ hex = "0.4.3"
 notify = "8.2.0"
 rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.142"
+serde_json = "1.0.143"
 sha2 = "0.10.9"
 snow = { version = "0.10.0", default-features = false, features = [ "use-getrandom", "use-curve25519", "use-chacha20poly1305", "use-blake2", "std" ] }
 tokio = { version = "1.47.1", features = ["full"] }
@@ -22,6 +22,10 @@ tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
 futures-util = "0.3.31"
 pin-project = "1.1.10"
 socket2 = { version = "0.6.0", features = ["all"] }
+url = "2.5.4"
+thiserror = "2.0.16"
+httparse = "1.10.1"
+base64 = "0.22.1"
 
 [profile.dev]
 panic = "abort"
