--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ sha2 = "0.10.9"
 snow = { version = "0.10.0", default-features = false, features = [ "use-getrandom", "use-curve25519", "use-chacha20poly1305", "use-blake2", "std" ] }
 tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
 futures-util = "0.3.31"
 pin-project = "1.1.10"
 socket2 = { version = "0.6.0", features = ["all"] }
