--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
       uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
         toolchain: stable
-        targets: ${{ matrix.target }}
+        target: ${{ matrix.target }}
         
     - name: Cache dependencies
       uses: actions/cache@v4
